kubernetes/deploy-app-simple.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: gunicorn
        image: jsolarz/flask-app:1.0
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
          protocol: TCP
      restartPolicy: Always
