kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app: app
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - app.honestbee.jp
    secretName: app.honestbee.jp.tls
  rules:
  - host: app.honestbee.jp
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 5000
        path: /
